--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   "dependencies": {
     "@types/node": "^20.14.11",
     "typescript": "^5.5.3"
+  },
+  "devDependencies": {
+    "@apollo/server": "^4.10.5",
+    "graphql": "^16.9.0"
   }
 }
